--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     }
     if(document.getElementsByClassName('project-entry').length === 0) {
       //document.getElementById('projects').style.display = 'none';
-      document.getElementById('projects').style.backgroundColor = 'black';
+     document.getElementById('projects').style.backgroundColor = 'black';
     }
     if(document.getElementsByClassName('education-entry').length === 0) {
       document.getElementById('education').style.backgroundColor = 'black';
@@ -138,7 +138,8 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
       document.getElementById('letsConnect').style.backgroundColor = 'black';
     }
     if(document.getElementById('map') === null) {
-      document.getElementById('mapDiv').style.display = 'none';
+      //document.getElementById('mapDiv').style.display = 'none';
+      document.getElementById('letsConnect').style.backgroundColor = 'black';
     }
   </script>
 </body>
